--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
   },
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^1.7.3",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
     "@nrwl/next": "13.4.1",
     "core-js": "^3.6.5",
+    "framer-motion": "^5",
     "next": "12.0.7",
+    "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "regenerator-runtime": "0.13.7",
