feat(bakate-blog): add some packages to use mdx within the blog

--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@nrwl/next": "13.4.1",
     "core-js": "^3.6.5",
     "framer-motion": "^5",
+    "gray-matter": "^4.0.3",
+    "highlight.js": "^11.3.1",
     "next": "12.0.7",
+    "next-mdx-remote": "^3.0.8",
     "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
