--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "reading-time": "^1.5.0",
     "regenerator-runtime": "0.13.7",
     "tslib": "^2.0.0"
   },
